--- a/cursos.html
+++ b/cursos.html
@@ -24,12 +24,13 @@
                      <span class="icon-bar"></span>
                      <span class="icon-bar"></span>
                 </button>
-
+                <a class="navbar-brand" href="index.html"><img class="logo" src="assets/img/1.png" alt="logo"></a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right navbar__navigation">
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="nosotros.html">Quienes somos</a></li>
                     <li><a href="cursos.html">Cursos</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
                     <li><a href="noticias.html">Noticias</a></li>
                     <li><a href="galeria.html">Galería</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
@@ -39,28 +40,16 @@
     </nav>
     <!-- Fin Navbar-->
     <!-- Header -->
-    <header class="container-fluid header_academia">
-        <h1>Te invitamos a participar de este arte de las manualidades</h1>
-        <!--Inicio beneficios -->
+    <header class="header_articulo">
         <div class="container">
             <div class="row">
-                <div class="col-xs-6 col-sm-3">
-                    <h3>Socializar</h3>
-                </div>
-                <div class="col-xs-6 col-sm-3">
-                    <h3>Aliviar el estres</h3>
-                </div>
-                <div class="col-xs-6 col-sm-3">
-                    <h3>Recreativo</h3>
-                </div>
-                <div class="col-xs-6 col-sm-3">
-                    <h3>Aprendizaje</h3>
+                <div class="col-xs-12">
+                    <h1>Cursos</h1>
                 </div>
             </div>
         </div>
-        <!-- Fin beneficios -->
     </header>
-    <!--Fin Header-->
+    <!--fin Header -->
     <!--Inicio cursos -->
     <div class="container">
         <div class="row">
@@ -731,6 +720,15 @@
         </div>
     </div>
     <!--Fin cursos -->
+    <!--Inicio cargar más articulos-->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center mas-contenido">
+                <p><a href="#" role="button">Cargar más cursos &rarr;</a></p>
+            </div>
+        </div>
+    </div>
+    <!--Fin cargar más articulos-->
 
     <!--Inicio footer -->
     <footer>
@@ -756,6 +754,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <!-- Font Awesome 5 -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
+    <!-- mi js -->
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
