--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right navbar__navigation">
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
+                    <li><a href="nosotros.html">Quienes somos</a></li>
                     <li><a href="cursos.html">Cursos</a></li>
                     <li><a href="noticias.html">Noticias</a></li>
                     <li><a href="galeria.html">Galería</a></li>
@@ -128,9 +128,48 @@
     <!-- Swiper -->
             <div class="swiper-container">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="assets/img/noticia_4.jpg"><p>Te invitamos a participar de este arte de las manualidades</p></div>
-                    <div class="swiper-slide"><img src="assets/img/noticia_3.jpg"></div>
-                    <div class="swiper-slide"><img src="assets/img/bordado.jpg"></div>
+                    <div class="swiper-slide">
+                        <div class="row">
+                            <div class="col-sm-8 col-md-7">
+                                <div class="subtitle">Nuevo</div>
+                                <div class="title">Seminario especial de pinceladas sobre cerámica</div>
+                                <div class="text">
+                                  <p>Dirigido al aprendizaje de 3 pinceles especiales marca Klimmek.Se realizará sobre una pieza de cerámica y se practicarán diversos tipos de pinceladas.</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-4 col-md-5">
+                                <img src="assets/img/ceramica.jpg" alt="" class="img-responsive">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="row">
+                            <div class="col-sm-8 col-md-7">
+                                <div class="subtitle">Nuevo</div>
+                                <div class="title">Seminario de bordado</div>
+                                <div class="text">
+                                  <p>Dirigido al aprendizaje de 3 pinceles especiales marca Klimmek.Se realizará sobre una pieza de cerámica y se practicarán diversos tipos de pinceladas.</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-4 col-md-5">
+                                <img src="assets/img/bordado.jpg" alt="" class="img-responsive">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="row">
+                            <div class="col-sm-8 col-md-7">
+                                <div class="subtitle">Nuevo</div>
+                                <div class="title">Seminario especial de pinceladas sobre cerámica</div>
+                                <div class="text">
+                                  <p>Dirigido al aprendizaje de 3 pinceles especiales marca Klimmek.Se realizará sobre una pieza de cerámica y se practicarán diversos tipos de pinceladas.</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-4 col-md-5">
+                                <img src="assets/img/seminario_cinta.jpg" alt="" class="img-responsive">
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <!-- Add Pagination -->
                 <div class="swiper-pagination"></div>
@@ -596,7 +635,7 @@
 
     <!--Inicio Nosotros -->
     <div class="nosotros">
-        <h2>Quiénes somos</h2>
+        <h2>Quienes somos</h2>
     </div>
     <div class="container">
         <div class="row">
@@ -651,37 +690,8 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
     <!-- Swiper slider -->
     <script src="assets/js/swiper.min.js"></script>
-    <!-- Initialize Swiper -->
-     <script>
-       var swiper = new Swiper('.swiper-container', {
-         speed: 600,
-         parallax: true,
-         pagination: {
-           el: '.swiper-pagination',
-           clickable: true,
-         },
-         navigation: {
-           nextEl: '.swiper-button-next',
-           prevEl: '.swiper-button-prev',
-         },
-       });
-     </script>
-     <!-- Initialize Swiper -->
-     <script>
-         var swiper = new Swiper('.swiper-container', {
-           slidesPerView: 1,
-           spaceBetween: 30,
-           loop: true,
-           pagination: {
-             el: '.swiper-pagination',
-             clickable: true,
-           },
-           navigation: {
-             nextEl: '.swiper-button-next',
-             prevEl: '.swiper-button-prev',
-           },
-         });
-     </script>
+    <!-- mi js -->
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
