--- a/galeria.html
+++ b/galeria.html
@@ -26,12 +26,13 @@
                      <span class="icon-bar"></span>
                      <span class="icon-bar"></span>
                 </button>
-
+                <a class="navbar-brand" href="index.html"><img class="logo" src="assets/img/1.png" alt="logo"></a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right navbar__navigation">
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="nosotros.html">Quienes somos</a></li>
                     <li><a href="cursos.html">Cursos</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
                     <li><a href="noticias.html">Noticias</a></li>
                     <li><a href="galeria.html">Galería</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
@@ -41,28 +42,16 @@
     </nav>
     <!-- Fin Navbar-->
     <!-- Header -->
-    <header class="container-fluid header_academia">
-        <h1>Te invitamos a participar de este arte de las manualidades</h1>
-        <!--Inicio beneficios -->
+    <header class="header_articulo">
         <div class="container">
             <div class="row">
-                <div class="col-xs-6 col-sm-3">
-                    <h3>Socializar</h3>
-                </div>
-                <div class="col-xs-6 col-sm-3">
-                    <h3>Aliviar el estres</h3>
-                </div>
-                <div class="col-xs-6 col-sm-3">
-                    <h3>Recreativo</h3>
-                </div>
-                <div class="col-xs-6 col-sm-3">
-                    <h3>Aprendizaje</h3>
+                <div class="col-xs-12">
+                    <h1>Galería</h1>
                 </div>
             </div>
         </div>
-        <!-- Fin beneficios -->
     </header>
-    <!--Fin Header-->
+    <!--fin Header -->
     <!--Inicio galeria -->
     <div class="container">
         <a href="assets/img/pintura_1.jpg" rel="lightbox" data-lightbox="cursos" data-title="Curso de pintura | 20 OCT"><img src="assets/img/pintura_1.jpg" alt="" class="example-image"></a>
@@ -122,6 +111,8 @@
     <script src="assets/js/swiper.min.js"></script>
     <!-- Galeria Lightbox -->
     <script src="assets/js/lightbox-plus-jquery.min.js"></script>
+    <!-- mi js -->
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
