--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                      <span class="icon-bar"></span>
                      <span class="icon-bar"></span>
                 </button>
-                
+
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right navbar__navigation">
@@ -64,124 +64,6 @@
         <!-- Fin beneficios -->
     </header>
     <!--Fin Header-->
-    <!-- Swiper -->
-    <div class="swiper-container">
-      <div class="parallax-bg" style="background-image:url(assets/img/fondo.jpg)" data-swiper-parallax="-23%"></div>
-      <div class="swiper-wrapper">
-        <div class="swiper-slide">
-          <div class="title" data-swiper-parallax="-300">Te invitamos a participar de este arte de las manualidades</div>
-          <div class="subtitle" data-swiper-parallax="-200">Subtitle</div>
-          <div class="text" data-swiper-parallax="-100">
-            <p>Te invitamos a participar de este arte de las manualidades</p>
-          </div>
-        </div>
-        <div class="swiper-slide">
-            <div class="row">
-                <div class="col-sm-8 col-md-7">
-                    <div class="subtitle" data-swiper-parallax="-200">Nuevo</div>
-                    <div class="title" data-swiper-parallax="-300">Seminario especial de pinceladas sobre cerámica</div>
-                    <div class="text" data-swiper-parallax="-100">
-                      <p>Dirigido al aprendizaje de 3 pinceles especiales marca Klimmek.Se realizará sobre una pieza de cerámica y se practicarán diversos tipos de pinceladas.</p>
-                    </div>
-                </div>
-                <div class="col-sm-4 col-md-5">
-                    <img src="assets/img/seminario_cinta.jpg" alt="" class="img-responsive">
-                </div>
-            </div>
-        </div>
-        <div class="swiper-slide">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="subtitle" data-swiper-parallax="-200">Nuevo</div>
-                    <div class="title" data-swiper-parallax="-300">Seminario de Decoupage</div>
-                    <div class="text" data-swiper-parallax="-100">
-                      <p>Dirigido al aprendizaje de 3 pinceles especiales marca Klimmek.Se realizará sobre una pieza de cerámica y se practicarán diversos tipos de pinceladas.</p>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="row">
-                        <div class="col-xs-6 col-sm-3">
-                            <h3>Socializar</h3>
-                        </div>
-                        <div class="col-xs-6 col-sm-3">
-                            <h3>Aliviar el estres</h3>
-                        </div>
-                        <div class="col-xs-6 col-sm-3">
-                            <h3>Recreativo</h3>
-                        </div>
-                        <div class="col-xs-6 col-sm-3">
-                            <h3>Aprendizaje</h3>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-      </div>
-      <!-- Add Pagination -->
-      <div class="swiper-pagination swiper-pagination-white"></div>
-      <!-- Add Navigation -->
-      <div class="swiper-button-prev swiper-button-white"></div>
-      <div class="swiper-button-next swiper-button-white"></div>
-    </div>
-
-
-    <!-- Swiper -->
-            <div class="swiper-container">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <div class="row">
-                            <div class="col-sm-8 col-md-7">
-                                <div class="subtitle">Nuevo</div>
-                                <div class="title">Seminario especial de pinceladas sobre cerámica</div>
-                                <div class="text">
-                                  <p>Dirigido al aprendizaje de 3 pinceles especiales marca Klimmek.Se realizará sobre una pieza de cerámica y se practicarán diversos tipos de pinceladas.</p>
-                                </div>
-                            </div>
-                            <div class="col-sm-4 col-md-5">
-                                <img src="assets/img/ceramica.jpg" alt="" class="img-responsive">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="row">
-                            <div class="col-sm-8 col-md-7">
-                                <div class="subtitle">Nuevo</div>
-                                <div class="title">Seminario de bordado</div>
-                                <div class="text">
-                                  <p>Dirigido al aprendizaje de 3 pinceles especiales marca Klimmek.Se realizará sobre una pieza de cerámica y se practicarán diversos tipos de pinceladas.</p>
-                                </div>
-                            </div>
-                            <div class="col-sm-4 col-md-5">
-                                <img src="assets/img/bordado.jpg" alt="" class="img-responsive">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="row">
-                            <div class="col-sm-8 col-md-7">
-                                <div class="subtitle">Nuevo</div>
-                                <div class="title">Seminario especial de pinceladas sobre cerámica</div>
-                                <div class="text">
-                                  <p>Dirigido al aprendizaje de 3 pinceles especiales marca Klimmek.Se realizará sobre una pieza de cerámica y se practicarán diversos tipos de pinceladas.</p>
-                                </div>
-                            </div>
-                            <div class="col-sm-4 col-md-5">
-                                <img src="assets/img/seminario_cinta.jpg" alt="" class="img-responsive">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Add Pagination -->
-                <div class="swiper-pagination"></div>
-                <!-- Add Arrows -->
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
-            </div>
-            <!-- Add Arrows -->
-
-
-
-
 
     <div class="container">
         <div class="row">
@@ -631,7 +513,59 @@
     </div>
     <!--Fin cursos -->
 
-
+    <!-- Swiper -->
+    <div class="swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <div class="row">
+                    <div class="col-sm-8 col-md-7">
+                        <div class="subtitle">Próximamente</div>
+                        <div class="title">Seminario especial de pinceladas sobre cerámica</div>
+                        <div class="text">
+                          <p>Dirigido al aprendizaje de 3 pinceles especiales marca Klimmek.Se realizará sobre una pieza de cerámica y se practicarán diversos tipos de pinceladas.</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 col-md-5">
+                        <img src="assets/img/ceramica.jpg" alt="" class="img-responsive">
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="row">
+                    <div class="col-sm-8 col-md-7">
+                        <div class="subtitle">Próximamente</div>
+                        <div class="title">Seminario de bordado</div>
+                        <div class="text">
+                          <p>Dirigido al aprendizaje de 3 pinceles especiales marca Klimmek.Se realizará sobre una pieza de cerámica y se practicarán diversos tipos de pinceladas.</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 col-md-5">
+                        <img src="assets/img/bordado.jpg" alt="" class="img-responsive">
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="row">
+                    <div class="col-sm-8 col-md-7">
+                        <div class="subtitle">Próximamente</div>
+                        <div class="title">Seminario especial de pinceladas sobre cerámica</div>
+                        <div class="text">
+                          <p>Dirigido al aprendizaje de 3 pinceles especiales marca Klimmek.Se realizará sobre una pieza de cerámica y se practicarán diversos tipos de pinceladas.</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 col-md-5">
+                        <img src="assets/img/seminario_cinta.jpg" alt="" class="img-responsive">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Add Pagination -->
+        <div class="swiper-pagination"></div>
+        <!-- Add Arrows -->
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+    </div>
+    <!-- Add Arrows -->
 
     <!--Inicio Nosotros -->
     <div class="nosotros">
