--- a/noticias.html
+++ b/noticias.html
@@ -58,7 +58,7 @@
                 </div>
                 <h3>Sampler básico</h3>
                 <p>Primer curso de patchwork, se trabajó un sampler con motivos a partir de 2 colores diferentes, pudiendo variar telas y crear diseños personalizados. </p>
-                <p><a href="#" class="vermas" role="button">Ver más &rarr;</a></p>
+                <a href="#" class="vermas" role="button">Ver más &rarr;</a>
            </div>
        </div>
        <div class="row">
@@ -68,7 +68,7 @@
                 </div>
                 <h3>Finalizacion taller decoupage</h3>
                 <p>Hermosos trabajos realizados por nuestros alumnos quienes participaron activamente en el taller DECOUPAGE, a cargo de Marcia Contreras, Muchas gracias a todos por participar.</p>
-                <p><a href="#" class="vermas" role="button">Ver más &rarr;</a></p>
+                <a href="#" class="vermas" role="button">Ver más &rarr;</a>
            </div>
        </div>
        <div class="row">
@@ -78,17 +78,18 @@
                </div>
                <h3>Taller decoupage</h3>
                <p>¿Qué es el decoupage? El arte del decoupage es básicamente el pegado de recortes de papel de distintos colores sobre el objeto elegido a decorar, para producir diferentes efectos de pintura. </p>
-               <p><a href="#" class="vermas" role="button">Ver más &rarr;</a></p>
+               <a href="#" class="vermas" role="button">Ver más &rarr;</a>
            </div>
        </div>
        <div class="row">
-           <div class="col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-7 articulo">
+           <div class="col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-7 articulo hidden">
                <div class="recorte">
                   <img src="assets/img/noticia_4.jpg" alt="" class="img-responsive">
                </div>
                <h3>Dias de arte 2018. VI jornadas de arte decorativo</h3>
                <p>Los pasados días se llevó a cabo en Montevideo la IX edición de Dias de Arte, Convención de arte decorativo de realización anual.</p>
-               <p><a href="#" class="vermas" role="button">Ver más &rarr;</a></p>
+               <p class="hidden">Los pasados días se llevó a cabo en Montevideo la IX edición de Dias de Arte, Convención de arte decorativo de realización anual.</p>
+               <a href="#" class="vermas" role="button">Ver más &rarr;</a>
            </div>
        </div>
    </div>
@@ -97,7 +98,7 @@
    <div class="container">
        <div class="row">
            <div class="col-sm-offset-1 col-sm-4 col-md-offset-2 col-md-3 mas-contenido">
-               <p><a href="#" role="button">Cargar más artículos &rarr;</a></p>
+               <a href="#" role="button" id="select_mas" class="mas_art">Cargar más artículos &rarr;</a>
            </div>
        </div>
    </div>
