--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                      <span class="icon-bar"></span>
                      <span class="icon-bar"></span>
                 </button>
-
+                <a class="navbar-brand" href="index.html"><img class="logo" src="assets/img/logo_academia.png" alt="logo academia encuentra tu arte"></a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right navbar__navigation">
@@ -43,7 +43,7 @@
     <!-- Fin Navbar-->
     <!-- Header -->
     <header class="container-fluid header_academia">
-        <h1>Te invitamos a participar de este arte de las manualidades</h1>
+        <h1>Te invitamos a participar del arte de las manualidades</h1>
         <!--Inicio beneficios -->
         <div class="container">
             <div class="row">
@@ -630,7 +630,8 @@
                 </div>
                 <div class="col-xs-12 col-sm-6">
                     <div class="embed-responsive embed-responsive-4by3">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3345.361569738004!2d-71.55319394081216!3d-33.0206034560586!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9689dde0dd7c48cf%3A0x5488f77dc48d4d53!2sAv.+Libertad+204%2C+Vi%C3%B1a+del+Mar%2C+Regi%C3%B3n+de+Valpara%C3%ADso!5e0!3m2!1ses-419!2scl!4v1543809239294" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>                    </div>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3345.361569738004!2d-71.55319394081216!3d-33.0206034560586!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9689dde0dd7c48cf%3A0x5488f77dc48d4d53!2sAv.+Libertad+204%2C+Vi%C3%B1a+del+Mar%2C+Regi%C3%B3n+de+Valpara%C3%ADso!5e0!3m2!1ses-419!2scl!4v1543809239294" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    </div>
                 </div>
             </div>
         </div>
