--- a/nosotros.html
+++ b/nosotros.html
@@ -24,7 +24,7 @@
                      <span class="icon-bar"></span>
                      <span class="icon-bar"></span>
                 </button>
-
+                <a class="navbar-brand" href="index.html"><img class="logo" src="assets/img/logo_academia.png" alt="logo academia encuentra tu arte"></a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right navbar__navigation">
@@ -115,7 +115,7 @@
                </div>
                <div class="col-xs-12 col-sm-6">
                    <div class="embed-responsive embed-responsive-4by3">
-                       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3344.3424751055577!2d-71.41888654970298!3d-33.04744938079747!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9689d84d4eaca915%3A0x49f3301690623eea!2sV+Centenario%2C+Quilpu%C3%A9%2C+Regi%C3%B3n+de+Valpara%C3%ADso!5e0!3m2!1ses-419!2scl!4v1541816979591" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3345.361569738004!2d-71.55319394081216!3d-33.0206034560586!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9689dde0dd7c48cf%3A0x5488f77dc48d4d53!2sAv.+Libertad+204%2C+Vi%C3%B1a+del+Mar%2C+Regi%C3%B3n+de+Valpara%C3%ADso!5e0!3m2!1ses-419!2scl!4v1543809239294" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                    </div>
                </div>
            </div>
